k8s/nextjs-app/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-app
  namespace: cmp-dev-1
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: nextjs-app
